--- a/DotNetBackEnd/LibraryMgmt/LibraryMgmt.csproj
+++ b/DotNetBackEnd/LibraryMgmt/LibraryMgmt.csproj
@@ -5,12 +5,14 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>f69b0253-771c-4359-bfe6-2d9e845459c6</UserSecretsId>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo> <!-- Added to prevent duplicate attributes -->
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.19" />
+   
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8">
       <PrivateAssets>all</PrivateAssets>
