--- a/DotNetBackEnd/LibraryMgmt/appsettings.json
+++ b/DotNetBackEnd/LibraryMgmt/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=localhost;Database=library_mgmt;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
   "Logging": {
